<resources>
    <string name="app_name">Frissbi</string>


    <!--- Start Logain-->
    <!---Strings-->
    <string name="sigin_in">Sigin In</string>
    <string name="get_started">Get Started ...... !</string>
    <string name="username">Type Here...</string>
    <string name="passowrd">............</string>
    <string name="flex">Set Meeting End Time</string>
    <string name="google_maps_key">AIzaSyCmJAbD3ijBFz_oFjOLvNJnh5e9chInBdc</string>
    <!--- Drawable-->
    <drawable name="friss_ring">@drawable/frissbi_logo_home</drawable>
    <!--- End Logain-->


    <!---Start register-->
    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>
    <!---end register-->


    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saving_image">Saving imageId</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>


    <!-- invite -->

    <string name="link">"https://play.google.com/store/apps/details?id=com.frissbi.app"</string>
    <string name="title_activity_home">Frissbi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World fromTime section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clock_icon">&#xf017;</string>
    <string name="calendar_icon">&#xf073;</string>
    <string name="location_icon">&#xf041;</string>
    <string name="reject_icon">&#xf057;</string>
    <string name="arrow_up_icon">&#xf176;</string>
    <string name="arrow_down_icon">&#xf175;</string>
    <string name="my_places">My Places</string>
    <string name="any_place">Any Place</string>
    <string name="meeting_duration">Meeting Duration</string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="selected_location">Selected location</string>
    <string name="check_connection">Please check your network connection</string>
    <string name="something_went_wrong">Something went wrong. We are fixing it for you.</string>
    <string name="enter_status">Please enter message</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="search_for_people">Search for people in search bar \n Type atleast 3 characters</string>
    <string name="online">Online</string>
    <string name="check_in_at">Check In at...</string>
    <string name="we_will_suggest_best_place_for_you">We will suggest the best place for you</string>
    <string name="skype_webex">Skype, WebEx, Join.me etc..</string>
    <!-- invite -->


</resources>
