<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/meeting_title_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_color"
        android:minHeight="150dp">

        <com.frissbi.CustomFontTextView
            android:id="@+id/meeting_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Meeting for.."
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/conform_meeting"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/done" />

    <android.support.v7.widget.CardView
        android:id="@+id/date_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conform_meeting"
        android:layout_margin="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.frissbi.CustomFontTextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date : "
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.frissbi.CustomFontTextView
                android:id="@+id/meeting_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:text="2017-01-01" />

            <com.frissbi.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/calendar_icon"
                android:textSize="20dp"
                app:font="fontawesome.ttf" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/time_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_cardView"
        android:layout_margin="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.frissbi.CustomFontTextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time : "
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.frissbi.CustomFontTextView
                android:id="@+id/meeting_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:text="10:00" />

            <com.frissbi.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/clock_icon"
                android:textSize="20dp"
                app:font="fontawesome.ttf" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/duration_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_cardView"
        android:layout_margin="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.frissbi.CustomFontTextView
                android:id="@+id/duration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Duration : "
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.frissbi.CustomFontTextView
                android:id="@+id/meeting_duration_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:text="2:00" />

            <com.frissbi.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/clock_icon"
                android:textSize="20dp"
                app:font="fontawesome.ttf" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/place_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/duration_cardView"
        android:layout_margin="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.frissbi.CustomFontTextView
                android:id="@+id/place_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Place : "
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.frissbi.CustomFontTextView
                android:id="@+id/meeting_place_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:text="-" />

            <com.frissbi.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/location_icon"
                android:textSize="20dp"
                app:font="fontawesome.ttf" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/add_friends_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/place_cardView">

        <com.frissbi.CustomFontTextView
            android:id="@+id/list_friends_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="List of Friends"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/addFriends"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/meeting2"
            android:layout_gravity="right"
            android:background="@drawable/addbutton"
            android:gravity="right" />
    </RelativeLayout>


    <ExpandableListView
        android:id="@+id/selected_contacts_expandableListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_friends_rl"
        android:layout_margin="6dp" />


    <!--<LinearLayout
        android:id="@+id/meeting3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/place_cardView"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">


            <com.frissbi.Utility.HorizontalView
                android:id="@+id/hor_list"
                android:layout_width="wrap_content"
                android:layout_height="50dp">

            </com.frissbi.Utility.HorizontalView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center|right"
            android:layout_weight="1"
            android:gravity="right">

            <Button
                android:id="@+id/addfriends"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/addbutton" />

        </LinearLayout>

    </LinearLayout>-->


</RelativeLayout>